--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.3"
+    "ts-pattern": "^4.0.5",
+    "typescript": "^4.8.3",
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
